erDiagram
    clientes {
        NUMBER id_cliente PK
        VARCHAR2 cpf UK "UNIQUE NOT NULL"
        VARCHAR2 nome "NOT NULL"
        VARCHAR2 email
        VARCHAR2 telefone
    }

    fornecedores {
        NUMBER id_fornecedor PK
        VARCHAR2 cnpj UK "UNIQUE NOT NULL"
        VARCHAR2 razaoSocial "NOT NULL"
        VARCHAR2 nomeFantasia
        VARCHAR2 email
        VARCHAR2 telefone
    }

    enderecos {
        NUMBER id_endereco PK
        VARCHAR2 cep "NOT NULL"
        VARCHAR2 logradouro "NOT NULL"
        NUMBER numero
        VARCHAR2 complemento
        VARCHAR2 bairro
        VARCHAR2 cidade
        VARCHAR2 estado
        NUMBER id_cliente FK
        NUMBER id_fornecedor FK
    }

    produtos {
        NUMBER id_produto PK
        VARCHAR2 nome "NOT NULL"
        VARCHAR2 descricao
        NUMBER preco_unitario "NOT NULL"
        NUMBER qtde_estoque "DEFAULT 0"
    }

    estoque {
        NUMBER id_produto PK,FK
        NUMBER custo_unitario "NOT NULL"
        NUMBER quantidade "NOT NULL"
        NUMBER total "NOT NULL"
    }

    vendas {
        NUMBER id_venda PK
        TIMESTAMP data_venda "NOT NULL"
        NUMBER valor_total
        NUMBER id_cliente FK
    }

    compras {
        NUMBER id_compra PK
        TIMESTAMP data_compra "NOT NULL"
        NUMBER valor_total
        NUMBER id_fornecedor FK
    }

    item_venda {
        NUMBER id_item_venda PK
        NUMBER id_venda FK "NOT NULL"
        NUMBER id_produto FK "NOT NULL"
        NUMBER quantidade "NOT NULL"
        NUMBER preco_unitario_venda "NOT NULL"
        NUMBER subtotal
    }

    item_compra {
        NUMBER id_item_compra PK
        NUMBER id_compra FK "NOT NULL"
        NUMBER id_produto FK "NOT NULL"
        NUMBER quantidade "NOT NULL"
        NUMBER preco_unitario_compra "NOT NULL"
        NUMBER subtotal
    }

    clientes ||--o{ enderecos : "possui"
    fornecedores ||--o{ enderecos : "possui"
    clientes ||--o{ vendas : "realiza"
    fornecedores ||--o{ compras : "fornece"
    produtos ||--|| estoque : "tem"
    vendas ||--o{ item_venda : "contém"
    produtos ||--o{ item_venda : "está em"
    compras ||--o{ item_compra : "contém"
    produtos ||--o{ item_compra : "está em"
